# vyklik

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  compose.yml  pyproject.toml  queues.yml
.github/workflows/: ci.yml  release.yml
migrations/: env.py
migrations/versions/: 20260504_initial.py
ops/: backup.sh  oracle-cloud.md
src/vyklik/: config.py  db.py  duw_client.py  healthz.py  models.py  queues_loader.py  work_hours.py
src/vyklik/bot/: __main__.py  commands.py  format.py  fsm.py  keyboards.py  notifier.py  repo.py  tickets.py
src/vyklik/bot/handlers/: __init__.py  lang.py  mysubs.py  queues.py  start.py
src/vyklik/i18n/: __init__.py  pl.py  ru.py
src/vyklik/poller/: __main__.py  diff.py  ingest.py  scheduler.py
tests/: conftest.py  test_diff.py  test_duw_client.py  test_work_hours.py
tests/fixtures/: duw_response.json
