[project]
name = "vyklik"
version = "0.0.1"
description = "Telegram bot for tracking DUW Wrocław queue status"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vyklik"]
